--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,8 +160,8 @@ body {
 	}
 
 	/* PILL STYLES */
-	.pill-button {
-		@apply rounded-full px-4 py-2 leading-none font-medium transition-colors duration-300 uppercase text-label-medium;
+	.pill {
+		@apply rounded-full px-4 py-2 leading-none font-medium text-label-medium bg-accent-1 w-fit;
 	}
 
 	/* HEADING STYLES */
