--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,8 +155,8 @@ body {
 		@apply bg-accent-1 text-secondary hover:bg-accent-1;
 	}
 
-	.btn-ghost {
-		@apply flex items-center border border-secondary bg-transparent px-4 py-2 font-medium text-secondary transition-colors duration-300 hover:bg-secondary hover:text-primary;
+	.btn-ghost-tertiary {
+		@apply border border-tertiary bg-transparent text-tertiary hover:bg-tertiary hover:text-secondary w-fit;
 	}
 
 	/* PILL STYLES */
