--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -24,7 +24,7 @@
 
 	--text-display-large: 100px;
 	--text-display-medium: 54px;
-	--text-display-small: 36px;
+	--text-display-small: 40px;
 	--text-headline-large: 40px;
 	--text-headline-medium: 40px;
 	--text-headline-small: 28px;
@@ -49,8 +49,9 @@
 	--breakpoint-3xl: 120rem;
 
 	/* Heights based on Tailwind's spacing scale: --spacing: 0.25rem /* 4px */
-	--height-header: calc(var(--spacing) * 57) /* [57] 14.25rem = 228px */;
-	--height-content: calc(100svh - var(--height-header));
+	--height-header-desktop: calc(var(--spacing) * 57) /* [57] 14.25rem = 228px */;
+	--height-header-mobile: calc(var(--spacing) * 36) /* [36] 9rem = 144px */;
+	--height-content: calc(100svh - var(--height-header-desktop));
 }
 
 @layer base {
