--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -166,7 +166,7 @@
 
 	/* TEXT STYLES */
 	.text-body {
-		@apply text-body-small md:text-body-medium lg:text-body-large;
+		@apply text-body-small md:text-body-medium lg:text-body-large font-light;
 	}
 
 	.text-paragraph {
@@ -183,20 +183,16 @@
 	}
 
 	.custom-rich-text p {
-		@apply text-body-small md:text-body-medium lg:text-body-large mb-6;
+		@apply text-body-small md:text-body-medium lg:text-body-large mb-6 font-normal;
 	}
 
 	.custom-rich-text p:last-of-type {
 		@apply mb-0;
 	}
 
-	.custom-rich-text h2 {
-		@apply text-title-small md:text-title-medium lg:text-title-large;
-	}
-
 	.custom-rich-text h2,
 	.custom-rich-text h3 {
-		@apply text-subtitle-large font-medium;
+		@apply text-subtitle-large font-normal;
 	}
 
 	.custom-rich-text a {
@@ -204,7 +200,7 @@
 	}
 
 	.custom-rich-text ul {
-		@apply list-disc ml-6 mb-6;
+		@apply list-disc ml-6 mb-6 text-body-small md:text-body-medium lg:text-body-large font-normal;
 	}
 
 	/* ANIMATIONS */
