--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -211,7 +211,9 @@
 	}
 
 	.gutter-stable {
-		scrollbar-gutter: stable;
+		@media (min-width: 1428px) {
+			scrollbar-gutter: stable;
+		}
 	}
 
 	.gutter-auto {
