wip update text styles

--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -24,7 +24,7 @@
 	--text-display-medium: 70px;
 	--text-display-small: 40px;
 	--text-headline-large: 40px;
-	--text-headline-medium: 40px;
+	--text-headline-medium: 34px;
 	--text-headline-small: 28px;
 	--text-title-large: 32px;
 	--text-title-medium: 25px;
@@ -32,12 +32,11 @@
 	--text-subtitle-large: 18px;
 	--text-subtitle-medium: 25px;
 	--text-subtitle-small: 20px;
-	--text-navlink-large: 20px;
 	--text-navlink-medium: 20px;
-	--text-navlink-small: 18px;
-	--text-body-large: 24px;
-	--text-body-medium: 22px;
-	--text-body-small: 20px;
+	--text-tag-medium: 16px;
+	--text-body-large: 20px;
+	--text-body-medium: 18px;
+	--text-body-small: 18px;
 	--text-label-large: 16px;
 	--text-label-medium: 14px;
 	--text-label-small: 12px;
@@ -115,7 +114,7 @@
 	}
 
 	.btn {
-		@apply rounded-3xl px-4 py-3 leading-none font-medium transition-colors duration-300 flex items-center justify-center gap-2 disabled:opacity-50;
+		@apply rounded-3xl px-4 py-3 text-xl font-medium tracking-tighter leading-none transition-colors duration-300 flex items-center justify-center gap-2 disabled:opacity-50;
 	}
 
 	.btn-primary {
@@ -149,7 +148,7 @@
 	}
 
 	.heading-headline {
-		@apply font-primary text-headline-small leading-[1.1] font-thin sm:text-headline-medium xl:text-headline-large;
+		@apply font-primary text-headline-small leading-[0.9] tracking-tight font-thin sm:text-headline-medium xl:text-headline-large;
 	}
 
 	.heading-title {
@@ -166,7 +165,11 @@
 	}
 
 	.text-paragraph {
-		@apply text-body-small md:text-body-medium max-w-prose text-pretty lg:text-body-large;
+		@apply text-body-medium max-w-prose text-pretty;
+	}
+
+	.text-tag {
+		@apply text-tag-medium leading-[0.9] uppercase tracking-tighter;
 	}
 
 	.text-label {
@@ -174,13 +177,13 @@
 	}
 
 	/* NAVLINK STYLES */
-	.text-link-lg {
-		@apply text-navlink-small md:text-navlink-medium lg:text-navlink-large leading-6;
+	.text-navlink {
+		@apply text-navlink-medium leading-6 tracking-tight font-medium;
 	}
 
 	/* RICH TEXT STYLES */
 	.custom-rich-text p {
-		@apply text-body-small md:text-body-medium lg:text-body-large mb-6 lg:mb-12 font-normal;
+		@apply text-body-medium mb-6 lg:mb-12 font-normal;
 	}
 
 	.custom-rich-text p:last-of-type {
@@ -197,7 +200,7 @@
 	}
 
 	.custom-rich-text ul {
-		@apply list-disc ml-6 mb-6 lg:mb-12 text-body-small md:text-body-medium lg:text-body-large font-normal;
+		@apply list-disc ml-6 mb-6 lg:mb-12 text-body-medium font-normal;
 	}
 
 	/* ANIMATIONS */
