--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -210,6 +210,16 @@
 	}
 
 	/* ANIMATIONS */
+
+	@keyframes fadeIn {
+		from {
+			opacity: 0;
+		}
+		to {
+			opacity: 1;
+		}
+	}
+
 	.form-input {
 		@apply px-3 py-2 border border-secondary rounded-lg disabled:opacity-50 disabled:cursor-not-allowed;
 	}
