fix: adjust styles for layout and animations in cases

--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -43,7 +43,8 @@
 	--text-label-medium: 14px;
 	--text-label-small: 12px;
 
-	--max-width-desktop: 2200px;
+	--max-width-desktop: 1500px;
+	--max-width-text: 759px;
 	--width-desktop: var(--max-width-desktop);
 
 	--breakpoint-3xl: 120rem;
@@ -146,19 +147,19 @@
 
 	/* HEADING STYLES */
 	.heading-display {
-		@apply font-primary text-display-small font-thin sm:text-display-medium md:text-display-large leading-none;
+		@apply font-primary text-display-small font-thin sm:text-display-medium md:text-display-large leading-none max-w-text;
 	}
 
 	.heading-headline {
-		@apply font-primary text-headline-small leading-[0.9] tracking-tight font-thin sm:text-headline-medium xl:text-headline-large;
+		@apply font-primary text-headline-small leading-[0.9] tracking-tight font-thin sm:text-headline-medium xl:text-headline-large max-w-text;
 	}
 
 	.heading-title {
-		@apply font-primary text-title-small font-normal sm:text-title-medium xl:text-title-large text-pretty tracking-tight leading-[0.96] md:leading-[0.9];
+		@apply font-primary text-title-small font-normal sm:text-title-medium xl:text-title-large text-pretty tracking-tight leading-[0.96] md:leading-[0.9] max-w-text;
 	}
 
 	.heading-subtitle {
-		@apply text-subtitle-small sm:text-subline-medium lg:text-subtitle-large font-medium text-pretty tracking-tight leading-[1.05];
+		@apply text-subtitle-small sm:text-subline-medium lg:text-subtitle-large font-medium text-pretty tracking-tight leading-[1.05] max-w-text;
 	}
 
 	/* TEXT STYLES */
@@ -167,11 +168,11 @@
 	}
 
 	.text-paragraph {
-		@apply text-body-medium max-w-prose text-pretty;
+		@apply text-body-medium text-pretty max-w-text;
 	}
 
 	.text-subline {
-		@apply text-subline-small lg:text-subline-medium leading-[1.1] tracking-tight font-normal;
+		@apply text-subline-small lg:text-subline-medium leading-[1.1] tracking-tight font-normal max-w-text;
 	}
 
 	.text-tag {
@@ -189,7 +190,7 @@
 
 	/* RICH TEXT STYLES */
 	.custom-rich-text p {
-		@apply text-body-medium mb-6 lg:mb-12 font-normal;
+		@apply text-body-medium mb-6 lg:mb-12 font-normal max-w-text;
 	}
 
 	.custom-rich-text p:last-of-type {
@@ -201,7 +202,7 @@
 	.custom-rich-text h4,
 	.custom-rich-text h5,
 	.custom-rich-text h6 {
-		@apply text-body-medium font-normal mt-6 lg:mt-12 mb-2 leading-[1.1];
+		@apply text-body-medium font-normal mt-6 lg:mt-12 mb-2 leading-[1.1] max-w-text;
 	}
 
 	.custom-rich-text a {
@@ -217,9 +218,11 @@
 	@keyframes fadeIn {
 		from {
 			opacity: 0;
+			transform: translateY(50%);
 		}
 		to {
 			opacity: 1;
+			transform: translateY(0);
 		}
 	}
 
