--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -151,7 +151,7 @@
 	}
 
 	.heading-headline {
-		@apply font-primary text-headline-small leading-[0.9] tracking-tight font-thin sm:text-headline-medium xl:text-headline-large max-w-text;
+		@apply font-primary text-headline-small leading-none tracking-tight font-thin sm:text-headline-medium xl:text-headline-large max-w-text;
 	}
 
 	.heading-title {
